--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
 		"eslint-plugin-prettier": "^3.0.1",
 		"eslint-plugin-promise": "^4.0.1",
 		"eslint-plugin-standard": "^4.0.0",
-		"jsdoc": "^3.6.4",
+		"jsdoc": "^3.6.7",
 		"mocha": "^8",
 		"prettier": "^1.16.4"
 	},
 	"dependencies": {
-		"async": "^3"
+		"async": "^3",
+		"next-tick": "^1.1.0"
 	}
 }
