--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "vcd-parser",
-	"version": "1.0.1",
+	"name": "cloudv-vcd-parser",
+	"version": "1.1.0",
 	"description": "Node.js VCD Parsing Tool",
 	"main": "lib/vcd-parser.js",
 	"scripts": {
-		"test": "npm run lint && ./node_modules/mocha/bin/mocha -R spec --exit",
+		"test": "./node_modules/mocha/bin/mocha -R spec --exit",
 		"lint": "./node_modules/.bin/eslint .",
 		"pretty": "./node_modules/.bin/prettier --write --config .prettierrc.js {test,__{tests,mocks}__}/**/*.js {lib,__{tests,mocks}__}/**/*.js",
 		"prettier": "npm run pretty",
@@ -12,7 +12,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/ahmed-agiza/vcd-parser.git"
+		"url": "git+https://github.com/Cloud-V/vcd-parser.git"
 	},
 	"engines": {
 		"node": ">= 7.6"
